Homepage image test

--- a/style.css
+++ b/style.css
@@ -61,5 +61,5 @@ nav ul li {
     top: 82px;
     height: 600px;
     width: 100%;
-    background-image:url(forest.jpeg)
+    background-image:url(https://raw.githubusercontent.com/coxn1446/coxn1446.github.io/main/forest.jpeg)
 }
