--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,7 +62,7 @@ nav ul li {
     top: 0px;
     height: 600px;
     width: 100%;
-    background-image:url(https://raw.githubusercontent.com/coxn1446/coxn1446.github.io/main/forest.jpeg)
+    background-image:url(https://raw.githubusercontent.com/coxn1446/coxn1446.github.io/main/Assets/forest.jpeg)
 }
 
 .homepageQuote {
