--- a/CSS/GridTemplateProject.css
+++ b/CSS/GridTemplateProject.css
@@ -1,5 +1,7 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    margin: 0px;
+    padding: 0px;
 
 }
 
@@ -20,6 +22,47 @@
     grid-column: 1 / span 12;
     grid-row: 1 / span 1;
     background-color: brown;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6,1fr);
+    grid-template-areas: none;
+    grid-gap: 10px;
+}
+.itemAA {
+    grid-column: 1 / span 12;
+    grid-row: 2 / span 4;
+}
+.itemABContainer {
+    grid-column: 9 / span 4;
+    grid-row: 2 / span 4;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(1,1fr);
+    grid-template-areas: none;
+    grid-gap: 10px;
+}
+
+.itemABA {
+    grid-column: 1 / span 3;
+}
+
+.itemABB {
+    grid-column: 4 / span 3;
+}
+
+.itemABC {
+    grid-column: 7 / span 3;
+}
+
+.itemABD {
+    grid-column: 10 / span 3;
+}
+
+.itemABA, .itemABB, .itemABC, .itemABD {
+    margin: auto;
+    font-size: 24px;
+    text-align:center;
+    grid-row: 1 / span 1;
 }
 
 .itemB {
