--- a/CSS/GridTemplateProject.css
+++ b/CSS/GridTemplateProject.css
@@ -4,7 +4,7 @@
     padding: 0px;
 }
 
-@media only screen and (min-width:320px) and (max-width:599px){ /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ 
+@media (min-width:320px){
     
     .containerGrid {
         display: grid;
@@ -255,7 +255,7 @@
     }
 
 }
-@media only screen and (min-width:600px) and (max-width: 1025px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
+@media (min-width:600px){
 
     .containerGrid {
         display: grid;
@@ -504,7 +504,7 @@
     }
 
 }
-@media only screen and (min-width:1026px) { /* hi-res laptops and desktops */ 
+@media (min-width:1026px) {
 
 .containerGrid {
     display: grid;
