--- a/CSS/GridTemplateProject.css
+++ b/CSS/GridTemplateProject.css
@@ -19,15 +19,15 @@
         grid-column: 1 / span 6;
         grid-row: 1 / span 2;
         display:grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(3,1fr);
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: repeat(2,1fr);
         grid-template-areas: none;
         grid-gap: 10px;
         border: 2px solid black;
     }
     .itemAA {
-        grid-column: 1 / span 12;
-        grid-row: 1 / span 2;
+        grid-column: 1 / span 7;
+        grid-row: 1 / span 1;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,11 +36,11 @@
         font-size: 24px;
     }
     .itemABContainer {
-        grid-column: 3 / span 8;
-        grid-row: 2 / span 1;
+        grid-column: 1 / span 7;
+        grid-row: 3 / span 6;
         display: none;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(1,1fr);
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: repeat(4,1fr);
         grid-template-areas: none;
         grid-gap: 10px;
     }
@@ -51,28 +51,41 @@
     
     .itemABA, .itemABB, .itemABC, .itemABD {
         font-size: 22px;
-        grid-row: 1 / span 1;
         height: 100%;
-        display: none;
         justify-content: center;
         align-items: center;
         text-align: center;
+        grid-column: 3 / span 3;
     }
 
     .itemABA {
-        grid-column: 1 / span 3;
+        grid-row: 1 / span 1;
+        display: none;
     }
     
     .itemABB {
-        grid-column: 4 / span 3;
+        grid-row: 1 / span 1;
+        display: none;
     }
     
     .itemABC {
-        grid-column: 7 / span 3;
+        grid-row: 1 / span 1;
+        display: none;
     }
     
     .itemABD {
-        grid-column: 10 / span 3;
+        grid-row: 1 / span 1;
+        display: none;
+    }
+
+    .itemAC {
+        grid-row: 2 / span 1;
+        grid-column: 4 / span 1;
+    }
+
+    .menuButton {
+        width: 100%;
+        height: 100%;
     }
     
     .itemBContainer, .itemCContainer, .itemDContainer, .itemEContainer {
@@ -324,6 +337,10 @@
         align-items: center;
         text-align: center;
     }
+
+    .itemAC {
+        display:none;
+    }
     
     .itemBContainer, .itemCContainer, .itemDContainer, .itemEContainer {
         display:grid;
@@ -572,6 +589,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.itemAC {
+    display: none;
 }
 
 .itemBContainer, .itemCContainer, .itemDContainer, .itemEContainer {
