--- a/CSS/OpenWeatherAPIProject.css
+++ b/CSS/OpenWeatherAPIProject.css
@@ -134,7 +134,7 @@ form {
 .itemDContainer {
     grid-column: 5 / span 4;
     grid-row: 4 / span 2;
-    display: grid;
+    display: none;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(9,1fr);
     border:2px solid black;
