--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -8,13 +8,13 @@
     .containerGrid {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: repeat(10, 75px);
+        grid-template-rows: repeat(8, 75px);
         grid-template-areas: none;
     }
     
     .itemAContainer {
         grid-column: 1 / span 7;
-        grid-row: 1 / span 4;
+        grid-row: 1 / span 2;
         display:grid;
         grid-template-columns: repeat(7, 1fr);
         grid-template-rows: repeat(2,1fr);
@@ -35,7 +35,7 @@
     .itemABContainer {
         grid-column: 1 / span 7;
         grid-row: 3 / span 6;
-        display: grid;
+        display: none;
         grid-template-columns: repeat(7, 1fr);
         grid-template-rows: repeat(9,1fr);
         grid-template-areas: none;
@@ -83,6 +83,38 @@
     .menuButton {
         width: 100%;
         height: 100%;
+    }
+    .itemBContainer {
+        grid-column: 1 / span 12;
+        grid-row: 3 / span 6;
+        display:grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(8,1fr);
+    }
+    
+    .itemBA {
+        grid-column: 1 / span 12;
+        grid-row: 1 / span 8;
+        background-image: url(../Assets/mainelandscape.jpeg);
+    }
+    
+    .itemBBContainer {
+        grid-column: 2 / span 10;
+        grid-row: 7 / span 1;
+        display: grid;
+        background-color: blanchedalmond;
+        opacity: 80%;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4,1fr);
+        border-radius: 10px;
+    }
+    
+    .hal {
+        text-align: center;
+        grid-column: 2 / span 10;
+        grid-row: 2 / span 2;
+        font-weight: bolder;
+    
     }
 }
 
@@ -159,6 +191,39 @@
         display:none;
     }
 
+    .itemBContainer {
+        grid-column: 1 / span 12;
+        grid-row: 3 / span 6;
+        display:grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(8,1fr);
+    }
+    
+    .itemBA {
+        grid-column: 1 / span 12;
+        grid-row: 1 / span 8;
+        background-image: url(../Assets/mainelandscape.jpeg)
+    }
+    
+    .itemBBContainer {
+        grid-column: 3 / span 8;
+        grid-row: 7 / span 1;
+        display: grid;
+        background-color: blanchedalmond;
+        opacity: 80%;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4,1fr);
+        border-radius: 10px;
+    }
+    
+    .hal {
+        text-align: center;
+        grid-column: 2 / span 10;
+        grid-row: 2 / span 2;
+        font-weight: bolder;
+    
+    }
+
 }
 
 @media (min-width:1026px) {
@@ -166,10 +231,9 @@
 .containerGrid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(13,100px);
+    grid-template-rows: repeat(7,100px);
     grid-template-areas: none;
-    grid-gap: 10px;
-    padding: 0px 10px;
+    grid-gap: 0px;
 }
 
 .itemAContainer {
@@ -177,14 +241,13 @@
     grid-row: 1 / span 1;
     display:grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: repeat(7,1fr);
     grid-template-areas: none;
-    grid-gap: 10px;
     border: 2px solid black;
 }
 .itemAA {
     grid-column: 1 / span 12;
-    grid-row: 2 / span 4;
+    grid-row: 2 / span 5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -193,12 +256,11 @@
 }
 .itemABContainer {
     grid-column: 9 / span 4;
-    grid-row: 1 / span 6;
+    grid-row: 1 / span 7;
     display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(1,1fr);
     grid-template-areas: none;
-    grid-gap: 10px;
 }
 
 .itemABA {
@@ -233,6 +295,39 @@
 
 .itemAC {
     display: none;
+}
+
+.itemBContainer {
+    grid-column: 1 / span 12;
+    grid-row: 2 / span 6;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(8,1fr);
+}
+
+.itemBA {
+    grid-column: 1 / span 12;
+    grid-row: 1 / span 8;
+    background-image: url(../Assets/mainelandscape.jpeg);
+}
+
+.itemBBContainer {
+    grid-column: 3 / span 8;
+    grid-row: 7 / span 1;
+    display: grid;
+    background-color: blanchedalmond;
+    opacity: 80%;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4,1fr);
+    border-radius: 10px;
+}
+
+.hal {
+    text-align: center;
+    grid-column: 2 / span 10;
+    grid-row: 2 / span 3;
+    font-weight: bolder;
+
 }
 
 }
