--- a/CSS/OpenWeatherAPIProject.css
+++ b/CSS/OpenWeatherAPIProject.css
@@ -5,24 +5,22 @@
  }
  
  @media (min-width:320px){
-     .containerGrid {
-         grid-template-rows: repeat(9, 75px);
-     }
+
      
      .itemBContainer {
-         grid-column: 3 / span 3;
-         grid-row: 3 / span 1;
+         grid-column: 1 / span 7;
+         grid-row: span 1;
          display: flex;
+         justify-content: center;
      }
-     
+
      img {
-         width: 100%;
-         height: 100%;
+         height:100%;
      }
      
      .itemCContainer {
              grid-column: 1 / span 7;
-             grid-row: 4 / span 2;
+             grid-row: span 2;
              display:grid;
              grid-template-columns: repeat(12, 1fr);
              grid-template-rows: repeat(6,1fr);
@@ -65,7 +63,7 @@
      
      .itemDContainer {
          grid-column: 1 / span 7;
-         grid-row: 6 / span 3;
+         grid-row: span 3;
          display: none;
          grid-template-columns: repeat(12, 1fr);
          grid-template-rows: repeat(9,1fr);
@@ -97,25 +95,18 @@
  }
  
  @media (min-width:600px){
-     .containerGrid {
-        grid-template-rows: repeat(8,85px);
 
-     }
      
      .itemBContainer {
-         grid-column: 5 / span 4;
-         grid-row: 3 / span 1;
+         grid-column: 1 / span 12;
+         grid-row: span 1;
          display: flex;
-     }
-     
-     img {
-         width: 100%;
-         height: 100%;
+         justify-content: center;
      }
      
      .itemCContainer {
-             grid-column: 3 / span 8;
-             grid-row: 4 / span 1;
+             grid-column: 1 / span 12;
+             grid-row: span 1;
              display:grid;
              grid-template-columns: repeat(12, 1fr);
              grid-template-rows: repeat(6,1fr);
@@ -124,7 +115,7 @@
      }
      
      form {
-         grid-column: 1 / span 12;
+         grid-column: 4 / span 6;
          grid-row: 1 / span 6;
          display: grid;
          grid-template-columns: repeat(12, 1fr);
@@ -158,7 +149,7 @@
      
      .itemDContainer {
          grid-column: 3 / span 8;
-         grid-row: 5 / span 3;
+         grid-row: span 3;
          display: none;
          grid-template-columns: repeat(12, 1fr);
          grid-template-rows: repeat(8,1fr);
@@ -191,25 +182,16 @@
  
  @media (min-width:1026px) {
  
- .containerGrid {
-     grid-template-rows: repeat(6,100px);
-
- }
- 
  .itemBContainer {
-     grid-column: 6 / span 2;
-     grid-row: 2 / span 1;
+     grid-column: 1 / span 12;
+     grid-row: span 1;
      display: flex;
- }
- 
- img {
-     width: 100%;
-     height: 100%;
+     justify-content: center;
  }
  
  .itemCContainer {
-         grid-column: 5 / span 4;
-         grid-row: 3 / span 1;
+         grid-column: 1 / span 12;
+         grid-row: span 1;
          display:grid;
          grid-template-columns: repeat(12, 1fr);
          grid-template-rows: repeat(6,1fr);
@@ -218,7 +200,7 @@
  }
  
  form {
-     grid-column: 1 / span 12;
+     grid-column: 5 / span 4;
      grid-row: 1 / span 6;
      display: grid;
      grid-template-columns: repeat(12, 1fr);
@@ -251,31 +233,31 @@
  }
  
  .itemDContainer {
-     grid-column: 5 / span 4;
-     grid-row: 4 / span 2;
-     display: none;
+     grid-column: 1 / span 12;
+     grid-row: span 2;
+     display: grid;
      grid-template-columns: repeat(12, 1fr);
      grid-template-rows: repeat(9,1fr);
-     border:2px solid black;
  
  }
  
  .itemDA{
-     grid-column: 1 / span 12;
+     grid-column: 5 / span 4;
      grid-row: 1 / span 2;
      text-align: center;
      font-size: 24px;
      font-family: fantasy;
      margin: 5px;
+     border: 2px solid black
  
  }
  .itemDB{
-     grid-column: 1 / span 6;
+     grid-column: 5 / span 2;
      grid-row: 3 / span 6;
      margin: 5px;
  }
  .itemDC{
-     grid-column: 7 / span 6;
+     grid-column: 7 / span 2;
      grid-row: 3 / span 6;
      margin:5px;
  
