--- a/CSS/Projects.css
+++ b/CSS/Projects.css
@@ -1,34 +1,23 @@
-* {
-    /*border: 1px solid red;*/
-}
-
 @media (min-width:320px){
-    .containerGrid {
-        grid-template-rows: repeat(9, 75px);
-    }
 
     .itemBContainer {
         grid-column: 1 / span 7;
-        grid-row: 3 / span 6;
+        grid-row: span 6;
     }
 }
 
 @media (min-width:600px){
-    .containerGrid {
-        grid-template-rows: repeat(9, 85px);
-    }
+
     .itemBContainer {
         grid-column: 1 / span 12;
-        grid-row: 3 / span 6;
+        grid-row: span 6;
     }
 }
 
 @media (min-width:1026px){
-    .containerGrid {
-        grid-template-rows: repeat(8, 100px);
-    }
+
     .itemBContainer {
         grid-column: 1 / span 12;
-        grid-row: 2 / span 6;
+        grid-row: span 6;
     }
 }
