--- a/CSS/templateCSS.css
+++ b/CSS/templateCSS.css
@@ -8,13 +8,13 @@
     .containerGrid {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
-        /*grid-template-rows: repeat(9, 75px);*/
-        grid-template-areas: none;
+        grid-auto-rows: 75px;
+        grid-auto-flow: row;
     }
     
     .itemAContainer {
         grid-column: 1 / span 7;
-        grid-row: 1 / span 2;
+        grid-row: span 2;
         display:grid;
         grid-template-columns: repeat(7, 1fr);
         grid-template-rows: repeat(2,1fr);
@@ -90,13 +90,13 @@
     .containerGrid {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        /*grid-template-rows: repeat(8,85px);*/
-        grid-template-areas: none;
+        grid-auto-rows: 85px;
+        grid-auto-flow: row;
     }
     
     .itemAContainer {
         grid-column: 1 / span 12;
-        grid-row: 1 / span 2;
+        grid-row: span 2;
         display:grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(2,1fr);
@@ -163,14 +163,14 @@
     .containerGrid {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        /*grid-template-rows: repeat(7,100px);*/
-        grid-template-areas: none;
+        grid-auto-rows: 100px;
+        grid-auto-flow: row;
         grid-gap: 0px;
     }
     
     .itemAContainer {
         grid-column: 1 / span 12;
-        grid-row: 1 / span 1;
+        grid-row: span 1;
         display:grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(7,1fr);
