--- a/CSS/OpenWeatherAPIProject.css
+++ b/CSS/OpenWeatherAPIProject.css
@@ -5,7 +5,6 @@
  }
  
  @media (min-width:320px){
-
      
      .itemBContainer {
          grid-column: 1 / span 7;
@@ -90,6 +89,11 @@
          grid-row: 3 / span 6;
          margin:5px;
      
+     }
+
+     .weatherImage {
+         height: 100%;
+         width: 100%;
      }
  
  }
@@ -177,6 +181,11 @@
          margin:5px;
      
      }
+
+     .weatherImage {
+        height: 100%;
+        width: 100%;
+    }
  
  }
  
@@ -262,6 +271,11 @@
      margin:5px;
  
  }
+
+ .weatherImage {
+    height: 100%;
+    width: 100%;
+}
  
  
  }
