--- a/CSS/OpenWeatherAPIProject.css
+++ b/CSS/OpenWeatherAPIProject.css
@@ -14,7 +14,8 @@
      }
 
     .OpenWeatherLogo {
-         height:100%;
+         height: 100%;
+         width: 150px;
      }
      
      .itemCContainer {
@@ -79,16 +80,16 @@
          margin: 5px;
      
      }
+
      .itemDB{
          grid-column: 1 / span 6;
          grid-row: 3 / span 6;
          margin: 5px;
      }
+
      .itemDC{
          grid-column: 7 / span 6;
          grid-row: 3 / span 6;
-
-     
      }
 
      #weatherImage {
