--- a/jamming/src/Components/Navigation/navigation.css
+++ b/jamming/src/Components/Navigation/navigation.css
@@ -13,22 +13,28 @@ h1 {
 
   .itemABContainer {
       width: 100%;
-      align-content: center;
-      justify-content: center;
+      display: flex;
   }
 
   .itemABA, .itemABB, .itemABC, .itemABD {
     background-color: #010c3f;
     color: whitesmoke;
     font-family: 'Poppins', sans-serif;
-    display: inline-block;
-    padding: 16px;
-    margin: 10px;
-    width: 20.5%;
+    display: flex;
+    flex-flow: wrap;
     text-align: center;
-
+    padding: 5px;
+    margin: auto;
   }
 
   .itemABA :visited, .itemABB :visited, .itemABC :visited, .itemABD :visited {
       color: #fff;
   }
+
+  @media only screen and (min-width: 800px) {
+    .itemABContainer {
+      width: 75%;
+      display: flex;
+      margin: auto;
+  }
+    }
